# elg.gg

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
https-redirect/: Cargo.toml
https-redirect/src/: main.rs
src/: clipboard.rs  main.rs
static/: 404.html  500.html  index.html  style.css
static/clipboard/: clipboard.js  index.html  style.css
static/resources/css/: electrolize.css
static/resources/js/: ebackground.js  fadein.js
web/: Cargo.toml  Rocket.toml
web/src/: clipboard.rs  main.rs
web/static/: 404.html  500.html  index.html  style.css
web/static/clipboard/: clipboard.js  index.html  style.css
web/static/resources/: ebackground.js  home.css
web/static/resources/js/: ebackground.js
