[package]
name = "elg_gg"
version = "1.7.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2021"
repository = "https://github.com/Elgenzay/elg.gg"
license = "MIT-0"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.22", features = ["rustls-tls"] }
serde = "1.0.219"
rand = "0.9.1"
